--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <a href="/">
           <img src="img/logo.png" alt="{{ site.title }}">
           <div id="claim">
-            あなたが川崎市に納めた税金がどこで使われているかをお示しします
+            あなたが川崎市に納めた税金がどこで使われているかを示します。
           </div>
         </a>
       </div>
