--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,7 @@
           <li><a href="/contact.html">お問い合わせ</a></li>
           <li><a href="/links.html">関連サイト</a></li>
           <li><a href="/team.html">開発者</a></li>
+          <li><a href="/legend.html">凡例</a></li>
           <li><a href="/sources.html">データの出所</a></li>
           <li><a href="/about.html">このサイトについて</a></li>
           <li><a href="/bubbletree.html">使途別予算額</a></li>
