--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
           <li><a href="/about.html">このサイトについて</a></li>
           <li><a href="/bubbletree.html">使途別予算額</a></li>
           <!--li><a href="bubbletree-map.html">Country &amp; Regional Analysis</a></li-->
+          <li><a href="/legend.html" onClick="window.open('legend.html','アイコンの説明','width=300,height=300') ; return false ;">アイコンの説明</a></li>
           <li><a href="/">使途一日あたり</a></li>
         </ul>
       </nav>
