--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
           <li><a href="/contact.html">お問い合わせ</a></li>
           <li><a href="/links.html">関連サイト</a></li>
           <li><a href="/team.html">開発者</a></li>
-          <li><a href="/legend.html" onClick="window.open('kwsk_legend.html','アイコンの説明','width=640,height=480') ; return false ;">アイコンの説明</a></li>
+          <li><a href="/legend.html" onClick="window.open('legend.html','アイコンの説明','width=640,height=480') ; return false ;">アイコンの説明</a></li>
           <li><a href="/sources.html">データの出所</a></li>
           <li><a href="/about.html">このサイトについて</a></li>
           <li><a href="/bubbletree.html">使途別予算額</a></li>
