--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,11 @@
   <meta name="description" content="あなたの税金がどこで使われているかを示します">
   <meta name="viewport" content="width=device-width">
 
+  <meta property="og:url"    content="http://kawasaki.spending.jp/" />
+  <meta property="og:image"  content="http://kawasaki.spending.jp/img/logo.png" />
+  <meta property="og:description"  content="あなたの税金がどこで使われているかを示します" />
+  <meta property="og:site_name"  content="{{ site.title }}" />
+
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
@@ -26,6 +31,7 @@
       <!--[if lt IE 9]><p class=chromeframe>お使いのウェブヴラウザは古いため，当サイトのコンテンツを正常に表示できません．<br><a href="http://browsehappy.com/">最新のウェブブラウザ</a>で閲覧する事をお勧めします．</p><![endif]-->
       <div id="logo">
         <a href="/">
+          <div class="subtitle">川崎版</div>
           <img src="img/logo.png" alt="{{ site.title }}">
           <div id="claim">
             あなたが川崎市に納めた税金がどこで使われているかを示します。
