--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,12 @@
   <meta name="description" content="あなたの税金がどこで使われているかを示します">
   <meta name="viewport" content="width=device-width">
 
-  <meta property="og:url"    content="http://kawasaki.spending.jp/" />
-  <meta property="og:image"  content="http://kawasaki.spending.jp/img/logo.png" />
-  <meta property="og:description"  content="あなたの税金がどこで使われているかを示します" />
-  <meta property="og:site_name"  content="{{ site.title }}" />
+  <meta property="og:title" content="{{ site.title }}" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://kawasaki.spending.jp/" />
+  <meta property="og:image" content="http://kawasaki.spending.jp/img/logo.png" />
+  <meta property="og:description" content="あなたの税金がどこで使われているかを示します" />
+  <meta property="og:site_name" content="{{ site.title }}" />
 
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
