--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
       <!--[if lt IE 9]><p class=chromeframe>お使いのウェブヴラウザは古いため，当サイトのコンテンツを正常に表示できません．<br><a href="http://browsehappy.com/">最新のウェブブラウザ</a>で閲覧する事をお勧めします．</p><![endif]-->
       <div id="logo">
         <a href="/">
-          <div class="subtitle">川崎版</div>
+          <div class="subtitle">神奈川県川崎市版</div>
           <img src="img/logo.png" alt="{{ site.title }}">
           <div id="claim">
             あなたが川崎市に納めた税金がどこで使われているかを示します。
